--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.8.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
