--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "start": "serve -s dist"
+},
   "dependencies": {
     "framer-motion": "^12.8.0",
     "html2canvas": "^1.4.1",
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.1"
   }
